Fix Navbar Layout Stability on Mobile Views
This commit addresses the issue where the navbar toggler was inadvertently pushed down by long section titles in the subtitle area, particularly noticeable in mobile views. The resolution ensures a consistent and user-friendly navbar layout across all devices, regardless of content length in the subtitle. Key adjustments include:

- Optimized space distribution within the navbar to accommodate longer subtitles without affecting the layout of other navbar elements.
- Modified the position of the navbar toggler to be absolute, ensuring its placement remains consistent and is not influenced by the dynamic size of adjacent content.
- Implemented media queries for better responsive adjustments, ensuring the navbar remains accessible and visually coherent across various screen sizes.
- Adjusted font sizes and spacing within the navbar to improve readability and aesthetic appeal on smaller screens, accommodating the two-line subtitle requirement effectively.

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -70,12 +70,19 @@
 }
 
 .navbar-subtitle {
-    font-size: 12px;
-    font-weight: 400;
-    color: #f2f5ff !important;
-    opacity: 0; 
+    white-space: normal; 
+    max-width: 70%; 
+    font-size: 0.7rem; 
+    font-weight: lighter;
+    line-height: 1.3;
     transition: opacity 0.5s ease-in-out;
-}
+    height: auto; 
+    overflow: hidden; 
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+  }
+  
 
 .navbar .container-fluid {
     padding-right: 1rem;
@@ -89,5 +96,13 @@
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
+.navbar-toggler {
+    color: none !important;
+    position: absolute;
+    padding: 0.1rem;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 
